--- a/gallery/style.css
+++ b/gallery/style.css
@@ -27,21 +27,20 @@ body {
     transform:scale(1.05);
 }
 
-.back-btn {
-  position: fixed;
-  top: 30px;
-  left: 30px;
-  text-decoration: none;
-  color: white;
-  border: 1px solid rgba(255,255,255,0.3);
-  padding: 14px 28px;
-  letter-spacing: 2px;
-  font-size: 12px;
-  transition: 0.3s ease;
-  z-index: 1000;
+/* Buton */
+.back-button {
+    display:inline-block;
+    margin-top:20px;
+    padding:14px 32px;
+    border:1px solid #333;
+    text-decoration:none;
+    color:#fff;
+    font-size:13px;
+    letter-spacing:2px;
+    transition:0.4s;
 }
 
-.back-btn:hover {
-  background: white;
-  color: black;
+.back-button:hover {
+    background:#fff;
+    color:#000;
 }
