--- a/gallery/style.css
+++ b/gallery/style.css
@@ -48,3 +48,12 @@ body {
     background: #fff;
     color: #000;
 }
+
+@media (max-width:600px){
+    .back-button{
+        top:20px;
+        left:20px;
+        padding:10px 20px;
+        font-size:11px;
+    }
+}
